--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="YFI Coordinape"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/imgs/logo/logo232.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>YFI-Coordinape</title>
+    <title>Coordinape</title>
   </head>
   <body>
     <div id="root"></div>
