Add plausbile analytics to all pages

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Coordinape</title>
+    <script defer data-domain="coordinape.com" src="https://plausible.io/js/plausible.js"></script>
   </head>
   <body>
     <div id="root"></div>
