update description - fixes #531 (#578)
* update description - fixes #531

* Add social descriptions

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/imgs/logo/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="YFI Coordinape" />
+    <meta name="description" content="Coordinape | Decentralizing Compensation" />
+    <meta property="og:description" content="Coordinape | Decentralizing Compensation">
+    <meta name="twitter:description" content="Coordinape | Decentralizing Compensation">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/imgs/logo/logo232.png" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
