--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Coordinape</title>
-    <script defer data-domain="coordinape.com" src="https://plausible.io/js/plausible.js"></script>
+    <script
+      defer
+      data-api="/stats/api/event"
+      data-domain="coordinape.com"
+      src="/stats/js/script.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
